Pagination Complete
helping invoicePageDTO which carries list of invoices and count of found invoices